# University

./: README.md
Databases - PLSQL/: School Database Project.sql  lab 1 plsql.sql  lab 2 plsql.sql  lab 3 plsql.sql  lab 4 plsql.sql  lab 5 plsql.sql  lab 6 plsql.sql  lab 7 plsql.sql
Formal Languages and Automata - C++DFA to Regex/: CMakeLists.txt  main.cpp
Functional Programming/: lab1-7.hs  lab8-11.hs
Graphics/: 01_01_oldOpenGL.cpp  01_02_newOpenGL.cpp  02_01_Shader.vert  02_01_doua_primitive.cpp  02_02_Shader.frag  02_02_primitive.cpp  03_01_poligoane3d.cpp  03_02_poligoane3d_exemplu2.cpp  03_03_poligoane3d_new.cpp  04_00_animatie.cpp  04_01_Shader.frag  04_01_Shader.vert  04_01_resize.cpp  04_02_0_Shader.vert  04_02_1_Shader.vert  (+58 more)
Object Oriented Programming - C++/Homework 2 - The Shootout/: AK47.cpp  AK47.h  Armor.cpp  Armor.h  Battlefield.cpp  Battlefield.h  BulletproofVest.cpp  BulletproofVest.h  CMakeLists.txt  COVID19.cpp  COVID19.h  China.cpp  China.h  Engine.cpp  Engine.h  NorthKorea.cpp  NorthKorea.h  NuclearBomb.cpp  NuclearBomb.h  Player.cpp  Player.h  Russia.cpp  Russia.h  USA.cpp  USA.h  Vodka.cpp  Vodka.h  Weapon.cpp  Weapon.h
Object Oriented Programming - C++/Homework 2 - The Shootout remake/: BulletproofVest.cpp  BulletproofVest.h  CMakeLists.txt  Character.cpp  Character.h  GameEngine.cpp  GameEngine.h  Grenade.cpp  Grenade.h  Grenadier.cpp  Grenadier.h  Map.cpp  Map.h  Revolver.cpp  Revolver.h  Rifle.cpp  Rifle.h  Sniper.cpp  Sniper.h  SniperRifle.cpp  SniperRifle.h  Soldier.cpp  Soldier.h  Spy.cpp  Spy.h  Weapon.cpp  Weapon.h  main.cpp
(+125 files in other folders)
