cmake_minimum_required(VERSION 3.15)
project(Homework_2___The_Shootout_remake)

set(CMAKE_CXX_STANDARD 14)

add_executable(Homework_2___The_Shootout_remake main.cpp Sniper.cpp Sniper.h Grenadier.cpp Grenadier.h Soldier.cpp Soldier.h Spy.cpp Spy.h Character.cpp Character.h SniperRifle.cpp SniperRifle.h Grenade.cpp Grenade.h Revolver.cpp Revolver.h Rifle.cpp Rifle.h BulletproofVest.cpp BulletproofVest.h Map.cpp Map.h GameEngine.cpp GameEngine.h Weapon.cpp Weapon.h)