cmake_minimum_required(VERSION 3.15)
project(Homework_2___The_Shootout)

set(CMAKE_CXX_STANDARD 14)

add_executable(Homework_2___The_Shootout main.cpp Player.cpp Player.h China.cpp China.h NorthKorea.cpp NorthKorea.h USA.cpp USA.h Russia.cpp Russia.h Battlefield.cpp Battlefield.h Engine.cpp Engine.h AK47.cpp AK47.h NuclearBomb.cpp NuclearBomb.h COVID19.cpp COVID19.h BulletproofVest.cpp BulletproofVest.h Vodka.cpp Vodka.h Armor.cpp Armor.h Weapon.cpp Weapon.h)